feat: external referee model, migration and controller
